--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
     <li><a href="file:///Users/daisydurlinggoode/Desktop/Personal%20Files/23CS/01%20Code/London_Brochure/London_Fields.html">London Fields</a></li>
   </ul>
 </nav><br>
-       <p class="lived">I've lived in 4 places in the 3 and half years I've lived in London.</p>
+       <p class="lived">I've lived in 4 different areas in the 3 and half years I've lived in London.</p>
        <p class="favourite">Check out the links to see my favourite places in each of the areas.</p><br>
         <p class="food">Disclaimer: They are mostly food and drink joints.</p>
     </body>
