Update Barrel Boulangerie copy

--- a/Hoxton.html
+++ b/Hoxton.html
@@ -16,7 +16,7 @@
   </ul>
 </nav>
         <h2>Pizzaaaaaaaaaaa</h2><br>
-       <p>One of my favourite things about Hoxton is the £3 pizzas you can get at both The Barrel Boulangerie and it's neighbour Olive. </p>
+       <p>One of my favourite things about Hoxton is the £3 pizzas you can get at both The Barrel Boulangerie and it's neighbour Olive. I went to this place pretty regularly when I lived in the area but have also been back since. If I'm in the area and peckish, seems rude not to!</p>
        
     </body>
 </html>
